--- a/src/app/coin-detail/coin-detail.component.html
+++ b/src/app/coin-detail/coin-detail.component.html
@@ -1,1 +1,31 @@
-<p>coin-detail works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3 details">
+            <div class="img">
+                <img [src]="coinData?.image?.large" alt="image">
+                <h3 class="text-center" style="font-size: 23px;">{{coinData?.name}}</h3>
+                <h3 [innerHTML]="coinData?.description?.en.split('. ')[0]"></h3>
+                <div class="more-details">
+                    <span class="title">Rank:</span><span class="value">{{coinData?.market_cap_rank}}</span> <br>
+                    <span class="title">Current price:</span><span class="value">{{coinData?.market_data?.current_price.inr | currency : currency}}</span> <br>
+                    <span class="title">Market cap:</span><span class="value">{{coinData?.market_data.market_cap.inr | currency: currency}}</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <canvas
+                style="width: 300px"
+                baseChart
+                [data]="lineChartData"
+                [options]="lineChartOptions"
+                [type]="lineChartType">
+            </canvas>
+            <div class="d-flex justify-content-around">
+                <button (click)='getGraphData(1)' class="btn btn-custom">24 hours</button>
+                <button (click)='getGraphData(30)' class="btn btn-custom">30 days</button>
+                <button (click)='getGraphData(90)' class="btn btn-custom">90 days</button>
+                <button (click)='getGraphData(365)' class="btn btn-custom">1 year</button>
+            </div>
+        </div>
+    </div>
+</div>
