--- a/src/app/coin-list/coin-list.component.html
+++ b/src/app/coin-list/coin-list.component.html
@@ -14,7 +14,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">{{row.symbol | uppercase}}</h5>
                                     <span class="text-danger">{{row.market_cap_change_percentage_24h}}%</span>
-                                    <p class="card-text">{{row.current_price | currency: "INR"}}</p>
+                                    <p class="card-text">{{row.current_price | currency: currency}}</p>
                                 </div>
                             </div>
                         </div>
@@ -46,7 +46,7 @@
           <!-- Progress Column -->
           <ng-container matColumnDef="current_price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-            <td mat-cell *matCellDef="let row"> {{row.current_price | currency: "INR"}}% </td>
+            <td mat-cell *matCellDef="let row"> {{row.current_price | currency: currency}}% </td>
           </ng-container>
       
           <!-- Name Column -->
@@ -62,7 +62,7 @@
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr (click)="goToDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
