add: loading, types

--- a/src/app/coin-list/coin-list.component.scss
+++ b/src/app/coin-list/coin-list.component.scss
@@ -78,9 +78,11 @@ th {
     width: 25%;
 }
 
+td{
+    cursor: pointer;
+   }
 
 
 .mdc-data-table__header-row  {
-    background-color: #009688;
-    
+    background-color: #009688; 
 }
