--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,2 @@
-  <mat-toolbar>
-    <span>CRYPTO CHECKER</span>
-    <span class="example-spacer"></span>
-    <mat-form-field>
-      <mat-select (valueChange)="sendCurrency($event)" class="text-sm" [(ngModel)]="selectedCurrency">
-        <mat-option selected value="INR">INR</mat-option>
-        <mat-option value="USD">USD</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </mat-toolbar>
+<app-toolbar></app-toolbar>
 <router-outlet></router-outlet>
