--- a/src/app/coin-detail/coin-detail.component.html
+++ b/src/app/coin-detail/coin-detail.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-3 details">
+            <app-loading *ngIf="!coinData"></app-loading>
             <div class="img">
                 <img [src]="coinData?.image?.large" alt="image">
                 <h3 class="text-center" style="font-size: 23px;">{{coinData?.name}}</h3>
@@ -12,7 +13,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-8">
+
+        <app-loading *ngIf="graphIsLoading"></app-loading>
+        <div class="col-md-8" *ngIf="!graphIsLoading">
             <canvas
                 style="width: 300px"
                 baseChart
