--- a/src/app/coin-list/coin-list.component.html
+++ b/src/app/coin-list/coin-list.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="!bannerData"></app-loading>
 <div class="banner">
     <div class="container">
         <div class="header">
@@ -7,7 +8,7 @@
         <div class="sub-header">
             <marquee behavior="scroll" onmouseover="stop()" onmouseout="start()" loop="infinite" direction="left">
                 <div class="row">
-                    <ng-container *ngFor="let row of bannerData">
+                    <ng-container *ngFor="let row of bannerData" >
                         <div class="col-1">
                             <div class="card">
                                 <img [src]="row.image" alt="image" width="100">
@@ -25,8 +26,9 @@
     </div>
 </div>
 
-<div class="container">
-      <mat-form-field >
+<app-loading *ngIf="!dataSource"></app-loading>
+<div class="container" *ngIf="dataSource" >
+      <mat-form-field>
         <mat-label>Start typing...</mat-label>
         <input style="color: aliceblue;" matInput (keyup)="applyFilter($event)" placeholder="Start typing..." #input>
       </mat-form-field>
@@ -37,7 +39,7 @@
           <!-- ID Column -->
           <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Coin </th>
-            <td mat-cell *matCellDef="let row">
+            <td mat-cell *matCellDef="let row" >
                 <img [src]="row.image" alt="image" width="30">
                 <span class="mx-2"> {{row.symbol | uppercase}} </span>
             </td>
